--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.0.14",
     "qs": "^6.10.3",
+    "swiper": "^8.2.2",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15"
   },
