--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconfu/svg-inject": "^1.2.3",
     "axios": "^0.27.2",
     "fast-glob": "^3.2.11",
     "mitt": "^3.0.0",
