--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
   },
   "dependencies": {
     "@iconfu/svg-inject": "^1.2.3",
+    "@types/file-saver": "^2.0.5",
     "@vfup/github-corner": "^0.1.3",
     "@vueuse/core": "^8.7.5",
     "axios": "^0.27.2",
+    "docxtemplater": "^3.31.6",
+    "docxtemplater-image-module-free": "^1.1.1",
     "fast-glob": "^3.2.11",
+    "file-saver": "^2.0.5",
     "mitt": "^3.0.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.14",
+    "pizzip": "^3.1.3",
     "qs": "^6.11.0",
     "swiper": "^8.2.4",
     "vue": "^3.2.25",
