--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vfup/github-corner": "^0.1.3",
     "@vueuse/core": "^8.7.5",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.6",
     "docxtemplater": "^3.31.6",
     "docxtemplater-image-module-free": "^1.1.1",
     "fast-glob": "^3.2.11",
