--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
   },
   "dependencies": {
     "@iconfu/svg-inject": "^1.2.3",
+    "@tweenjs/tween.js": "^18.6.4",
     "@types/file-saver": "^2.0.5",
     "@vfup/github-corner": "^0.1.3",
     "@vueuse/core": "^8.7.5",
     "axios": "^0.27.2",
+    "clipboard": "^2.0.11",
     "dayjs": "^1.11.6",
     "docxtemplater": "^3.31.6",
     "docxtemplater-image-module-free": "^1.1.1",
     "fast-glob": "^3.2.11",
     "file-saver": "^2.0.5",
+    "highlight.js": "^11.6.0",
+    "less": "^4.1.3",
+    "marked": "^4.2.2",
     "mitt": "^3.0.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.14",
@@ -28,6 +33,7 @@
     "vue-router": "^4.0.15"
   },
   "devDependencies": {
+    "@types/marked": "^4.0.7",
     "@types/node": "^17.0.36",
     "@types/nprogress": "^0.2.0",
     "@types/qs": "^6.9.7",
