--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "file-saver": "^2.0.5",
     "highlight.js": "^11.6.0",
     "less": "^4.1.3",
+    "lodash": "^4.17.21",
     "marked": "^4.2.2",
     "mitt": "^3.0.0",
     "nprogress": "^0.2.0",
@@ -33,6 +34,7 @@
     "vue-router": "^4.0.15"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.188",
     "@types/marked": "^4.0.7",
     "@types/node": "^17.0.36",
     "@types/nprogress": "^0.2.0",
