--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fast-glob": "^3.2.11",
     "file-saver": "^2.0.5",
     "highlight.js": "^11.6.0",
+    "js-cookie": "^3.0.1",
     "less": "^4.1.3",
     "lodash": "^4.17.21",
     "marked": "^4.2.2",
@@ -34,6 +35,7 @@
     "vue-router": "^4.0.15"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/lodash": "^4.14.188",
     "@types/marked": "^4.0.7",
     "@types/node": "^17.0.36",
