--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "less": "^4.1.3",
     "lodash": "^4.17.21",
     "marked": "^4.2.2",
+    "mint-filter": "^3.0.1",
     "mitt": "^3.0.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.14",
